# rudp

./: Cargo.toml  README.md  idea.md  mechanism.html  rodo.md  todo.md
graveyard/: idea.md  mechanism.md
src/: endpoint.rs  graveyard.rs  header.rs  helper.rs  lib.rs  lil_heap.rs  mod_ord.rs  proto.rs  resend_predicates.rs  server.rs  tests.rs
src/try2/: TODO.md  endpoint2.rs  internal.rs  mod.rs  msg_box.rs  set_sender.rs  sliding_buffer.rs  state.rs  traits.rs
