[package]
name = "rudp"
version = "0.2.1"
authors = ["sirkibsirkib <christopher.esterhuyse@gmail.com>"]
repository = "https://github.com/sirkibsirkib/rudp"
readme = "README.md"
keywords = ["network", "udp", "protocol", "reliable"]
description = "State-wrapper for UdpSockets to implement RUDP protocol. Allows per-message selection of message guarantees on a spectrum from UDP-like to TCP-like."
license-file = "LICENSE.md"

[dependencies]
byteorder = "1.2"
derivative = "1.0"

[dev-dependencies]
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
mio = "0.6"